--- a/about/index.html
+++ b/about/index.html
@@ -86,6 +86,8 @@
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
       <p>I'm an internet vandal, lone rider, boring person.</p>
+<p>But if you're interested in how I built this, you'll want to <a href="https://www.getzola.org/">get zola</a>. You can see <a href="https://github.com/jstelzer/neverlight-zola-blog">how i used it</a> .
+And lastly, have a look at <a href="http://sigal.saimon.org/en/latest/">the sigal python gallery generator</a>. </p>
 
     </div>
   </div>
