--- a/about/index.html
+++ b/about/index.html
@@ -88,6 +88,10 @@
       <p>I'm an internet vandal, lone rider, boring person.</p>
 <p>But if you're interested in how I built this, you'll want to <a href="https://www.getzola.org/">get zola</a>. You can see <a href="https://github.com/jstelzer/neverlight-zola-blog">how i used it</a> .
 And lastly, have a look at <a href="http://sigal.saimon.org/en/latest/">the sigal python gallery generator</a>. </p>
+<p>I've tried lots of ways to do this blog. But in the last few days I have published more content than I have... pretty much ever.</p>
+<p>So I'm all in on zola and static site generation. At this point I have a nice little flow for jamming out content albums.</p>
+<p>Now, it should be obvious I'm not a photographer or web designer. I'm a motorcycle enthusiast, father to cats, happily married dude. I just
+want to post cool pics of stuff I've done and things I've seen that I had fun doing.</p>
 
     </div>
   </div>
